# fastplong

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  parallel.py  vcpkg.json
.github/workflows/: ci-cmake.yml  ci.yml  release.yml
benchmarks/: bench.cpp  sequence_benchmark.cpp
scripts/: init.sh
src/: adaptertrimmer.cpp  adaptertrimmer.h  cmdline.h  common.h  evaluator.cpp  evaluator.h  fastareader.cpp  fastareader.h  fastqreader.cpp  fastqreader.h  filter.cpp  filter.h  filterresult.cpp  filterresult.h  htmlreporter.cpp  htmlreporter.h  jsonreporter.cpp  jsonreporter.h  main.cpp  nucleotidetree.cpp  nucleotidetree.h  options.cpp  options.h  polyx.cpp  polyx.h  read.cpp  read.h  readpool.cpp  seprocessor.cpp  seprocessor.h  sequence.cpp  sequence.h  simdutil.h  singleproducersingleconsumerlist.h  stats.cpp  stats.h  threadconfig.cpp  threadconfig.h  unittest.cpp  util.h  (+2 more)
test/: adaptertrimmer_test.cpp  config.h.in  evaluator_test.cpp  fastareader_test.cpp  fastqreader_test.cpp  filter_test.cpp  globals.cpp  nucleotidetree_test.cpp  polyx_test.cpp  read_test.cpp  sequence_test.cpp  stats_test.cpp
